--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@coreui/coreui": "^4.3.2",
     "@coreui/vue": "^4.10.1",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "vue": "^3.3.4",
